<resources>
    <string name="app_name">Healchain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_number">Update Number</string>

    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_sign_in_response">Unknown response from server</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="start_phone_auth">Request Verification Code</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">New Phone Number</string>
    <string name="hint_verification_code">Enter Verification Code</string>
    <string name="status_code_sent">Code sent by SMS for verification.</string>
    <string name="status_verification_failed">Verification failed. Try again.</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_number_update_fail_invalid">Current user session invalid.</string>
    <string name="status_number_update_fail_duplicate">Number already linked to another user.</string>
    <string name="status_number_update_fail_login_required">Session Expired. Login to update number.</string>
    <string name="status_number_update_success">Phone number successfully updated.</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="phone_title_text">Phone Number</string>

    <string name="label_phone_auth">Update Phone Number</string>
    <string name="title_activity_maps">Map</string>

</resources>
